--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_trackorder.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_trackorder.scss
@@ -7,6 +7,7 @@
  .product-block.order-details .list-top-title{
  	background: #f9f9f9;
     border: 1px solid #e4e8f0;
+    display: table;
  }
  .product-block.order-details .list-top-title li{
 	display: inline-block;
@@ -14,6 +15,9 @@
     padding: 5px;
     width: 24%;
 	padding-left: 11px;
+    vertical-align: top;
+    word-break: break-all;
+    display: table-cell;
  }
  
  .product-block.order-details .list-top-title li:last-child{
